# python-cpp-interop

./: .gitignore  README.md
cpp_struct_to_ctypes/: VBParserDef.h  VBParserDef.py  dxva_def.py  gen.py  h264_pps.h  h264_pps_new.h  pstruct.py
cpp_struct_to_ctypes/cpp_app/: cmd.txt  layout.txt  test  test.cpp
cppimport_pybind11/: cmd.txt  mylib.cpp  test.py
ctypes_setuptools/: mysum.cpp  setup.py  test.py
ctypes_struct_to_cpp/: build.sh  cmd.txt  layout.txt  mylib.cpp  test.py
ctypes_union/: union.py
libva-struct-parsing/: CMakeLists.txt  env.sh  gen_env.py  h264pic.py  mylib.cpp  test.py
