cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_FLAGS "-std=c++11 -g -O0")

project(pymylib)

if(DEFINED ENV{PYTHON_INCLUDE} AND DEFINED ENV{PYBIND11_INCLUDE})
    message(STATUS "INFO: PYTHON_INCLUDE=" $ENV{PYTHON_INCLUDE})
    message(STATUS "INFO: PYBIND11_INCLUDE=" $ENV{PYBIND11_INCLUDE})
else()
    message(FATAL_ERROR "####ERROR: PYTHON_INCLUDE & PYBIND11_INCLUDE is not set, run \"python3 gen_env.py\" to generate \"env.sh\" and run \"source env.sh\"")
endif()

include_directories (pymylib $ENV{PYTHON_INCLUDE} $ENV{PYBIND11_INCLUDE})
add_library(pymylib SHARED mylib.cpp)
target_link_libraries(pymylib va va-drm)
set_target_properties(pymylib PROPERTIES PREFIX "")